# open-lakehouse

./: .env-terraform.mlflow-ecs.example  .env-terraform.spark-ecs.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose-airflow.yml  docker-compose-kafka.yml  docker-compose-mlflow.yml  docker-compose-notebooks.yml  docker-compose-spark41.yml  docker-compose-unity-catalog.yml  lakehouse  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/agents/: lakehouse-engineer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  demo_proposal.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/airflow/: setup_connections.sh
config/mlflow/: gateway-config.yml
config/spark/: spark-defaults.conf.example
config/unity-catalog/: server.properties.example
demos/: FACILITATOR_GUIDE.md  README.md  preflight.sh
demos/_template/: README.md  teardown.sh
demos/local-mode-spark/: README.md
demos/mlflow/: AGENTS.md  README.md  pyproject.toml
demos/mlflow/app/agents/: conversation_agent.py  intent_parser.py  memory.py  prompt_builder.py  sql_generator.py
demos/mlflow/app/config/: settings.py
demos/mlflow/app/hardening/: discovery_expansion.py
demos/mlflow/app/metadata/: catalog_sources.py  metadata_store.py  sample_questions.py  schema_registry.py  table_ingestion.py  unity_catalog_adapter.py
demos/mlflow/app/observability/: mlflow_tracing.py  telemetry.py
demos/mlflow/app/orchestration/: langgraph_workflow.py  state.py
demos/mlflow/app/prompts/: followup_prompt.md  guardrail_prompt.md  intent_parsing_prompt.md  sql_generation_prompt.md  system_prompt.md
demos/mlflow/app/safety/: query_guardrails.py  sql_validator.py
demos/mlflow/app/spark/: dataframe_formatter.py  query_executor.py  spark_session.py
demos/mlflow/app/ui/: streamlit_app.py
demos/mlflow/app/utils/: helpers.py  logging.py
demos/mlflow/app/visualization/: chart_builder.py
demos/mlflow/src/mlflow_fastpath_demo/: __init__.py
demos/mlflow/tests/: test_executor.py  test_fast_path_integration.py  test_intent_parser.py  test_metadata_ingestion.py  test_observability.py  test_orchestration.py  test_query_guardrails.py  test_schema_registry.py  test_sql_generation.py  test_sql_validator.py  test_visualization.py
demos/realtime-mode/: README.md  produce_test_data.py  rtm_pipeline.py  rtm_stream_lib.py  teardown.sh  test_pipeline.py
demos/sdp-cli-lifecycle/: README.md  teardown.sh  walkthrough.sh
demos/sdp-imperative-to-declarative/: README.md  imperative_pipeline.py  teardown.sh
demos/sdp-medallion/: CONTAINER.md  Dockerfile  README.md  imperative_medallion.py  remote_client_medallion.py  reset.py  spark-pipeline.yml  teardown.sh
demos/sdp-streaming-batch-sql/: README.md  run.sh  seed.py  spark-pipeline.yml  teardown.sh
docker/airflow/: Dockerfile
docker/jupyter/: Dockerfile
docker/jupyter-hosted/: Dockerfile  entrypoint.sh  log4j2.properties  spark-defaults.conf.template
docker/mlflow/: Dockerfile  entrypoint.sh
docs/: README.md  architecture.md  troubleshooting.md
docs/deployment/: aws.md  databricks.md  local.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: airflow.md  cli-reference.md  pipelines.md  streaming.md  test-data.md  unity-catalog.md
docs/runbooks/: demo-lifecycle.md
schemas/iceberg/: v001_initial_medallion.sql  v002_add_order_tables.sql
schemas/unity_catalog/: v001_initial_catalogs.sql
scripts/connectivity/: test-full-stack.py  test-iceberg.py  test-kafka.py  test-seaweedfs.py  test-streaming-iceberg.py  test-unity-catalog-live.py
scripts/pipelines/: pipeline_sdp.py  pipeline_spark41.py  spark-pipeline.yml
scripts/terraform/: deploy-mlflow-ecs.sh  spark-ecr-push.sh  (+2 more)
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform-databricks/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform-notebooks/: .gitignore  main.tf  terraform.tfvars.example
tests/: __init__.py  conftest.py  test_project_structure.py  test_security.py
(+84 files in other folders)
