[project]
name = "mlflow-fastpath-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jules Damji", email = "dmatrix@comcast.net" }
]
requires-python = ">=3.11"
dependencies = [
    "delta-spark>=4.2.0",
    "grpcio>=1.80.0",
    "grpcio-status>=1.80.0",
    "langgraph>=1.2.0",
    "mlflow>=3.12.0",
    "openai>=2.37.0",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "pyspark>=4.1.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sqlglot>=30.8.0",
    "streamlit>=1.57.0",
]

[project.scripts]
mlflow-fastpath-demo = "mlflow_fastpath_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
